# dtu-thesis-honeypot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: getting-started.md  index.md  mkdocs.yaml
src/: breadcrumbs.py  honeypot_server.py  main.py
src/cloner/: clone_page.py
src/tests/: test_breadcrumbs.py  test_honeypot.py
src/utils/: logging.py
